<resources>
    <string name="app_name">Шаги RPG. Фитнес игра с шагомером</string>
    <string name="app_header">Шаги квест: Испытай себя</string>
    <string name="enter_username">Имя пользователя</string>
    <string name="enter_password">Пароль</string>
    <string name="register_text">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="forgot_password_text">Забыли пароль?</string>
    <string name="enter_button_text">Войти</string>
    <string name="points_gained">Очков получено: %d</string>
    <string name="goal">Цель: %d</string>
    <string name="steps_taken">Шагов пройдено всего: %d</string>
    <string name="time_till_end">Время на завершение: %s</string>
    <string name="statistics_amount_of_steps_passed">Вы прошли <font color="#FF7A00">%d</font> шагов что равно <font color="#FF7A00">%s</font> км</string>
    <string name="statistics_percent_of_completion"><font color="#FF7A00">%d</font>%% от цели на день</string>
    <string name="statistics_button_text">Статистика</string>
    <string name="statistics_amount_of_completed_challenges"><font color="#FF7A00">%d</font> из текущих %d испытаний выполнено</string>
    <string name="user_icon_description">Изображение пользователя</string>
    <string name="toolbar_tab_challenges_text">Испытания</string>
    <string name="toolbar_tab_rating_text">Рейтинг</string>
    <string name="toolbar_tab_daily_text">Заказы</string>
    <string name="toolbar_tab_guilds_text">Гильдии</string>
    <string name="toolbar_tab_duels">Дуэли</string>
    <string name="menu_profile_title">Профиль</string>
    <string name="menu_inventory_title">Инвентарь</string>
    <string name="menu_rewards_title">Награды</string>
    <string name="user_level_text">Уровень: %d</string>
    <string name="menu_edit_profile">Редактировать профиль</string>
    <string name="item_challenge_start_challenge_button_text">Начать испытание</string>
    <string name="statistics_today_step_count_goal"><font color="#FF7A00">%d шаг за сегодня</font>, цель - %d</string>
    <string name="statistics_change_score_sign_text">Изменить цель</string>
    <string name="statistics_scale_days">Дни</string>
    <string name="statistics_scale_weeks">Недели</string>
    <string name="statistics_scale_months">Месяцы</string>
    <string name="profile_statistics_header_text">Статистика</string>
    <string name="profile_amount_of_completed_challenges">Количество выполненных испытаний: <font color="#FF7A00">%d</font></string>
    <string name="profile_amount_of_achievements">Всего получено достижений: <font color="#FF7A00">%d</font></string>
    <string name="profile_guild_header_text">Гильдия</string>
    <string name="user_profile_guild_name_text">Состоит в гильдии: %s</string>
    <string name="manu_achievements_title">Достижения</string>
    <string name="user_profile_level_text">Уровень</string>
    <string name="profile_duels_won">Выиграно дуэлей: <font color="#FF7A00">%d</font></string>
    <string name="profile_amount_of_steps">Шагов пройдено всего: <font color="#FF7A00">%d</font></string>
    <string name="achievements_list_header_text">Витрина достижений</string>
    <string name="menu_characteristics_title">Характеристики</string>
    <string name="profile_change_button_text">Редактировать профиль</string>
    <string name="item_day_percent_of_goal_text">%d%%</string>
    <string name="statistics_step_count_day">%d шаг за день</string>
    <string name="statistics_step_count_week">%d шаг за неделю</string>
    <string name="statistics_step_count_month">%d шаг за месяц</string>
    <string name="statistics_kilometers_count_day">%s км расстояние за день</string>
    <string name="statistics_kilometers_count_week">%s км расстояние за неделю</string>
    <string name="statistics_kilometers_count_month">%s км расстояние за месяц</string>
    <string name="statistics_average_steps">%d шаг в среднем за день</string>
    <string name="item_goal_selection_text">%d шагов (%s км)</string>
    <string name="item_challenge_end_challenge_button">Завершить испытание</string>
    <string name="fragment_daily_tasks_claim_reward_button_text">Забрать награду</string>
    <string name="fragment_daily_tasks_amount_of_completed_daily_tasks_text">%d из %d</string>
    <string name="item_level_amount_of_challenges_completed">%d из %d испытаний</string>
    <string name="item_level_minimal_level_requirement_text">Мин. уровень - %d</string>
    <string name="item_level_name_text">Уровень %d - %s</string>
    <string name="choose_level_button_text">Выбрать уровень</string>
    <string name="amount_of_xp_text">%d/%d</string>
    <string name="amount_of_points_fixed">+ %d очков к 100 шагам</string>
    <string name="amount_of_points_multiplier">+ %s к количеству очков</string>
    <string name="amount_of_minutes_fixed">+ %d мин к продолжительности испытания</string>
    <string name="time_multiplier">+ %s к продолжительности испытания</string>
    <string name="confirm">Подтвердить</string>
    <string name="amount_of_xp_gained">Получено опыта: %d</string>
    <string name="header_message_challenge">Испытание выполнено</string>
    <string name="header_message_duel">Дуэль завершена</string>
    <string name="header_message_daily_challenge">Награда за ежедневные испытания</string>
    <string name="task_description">Наберите %d шагов за день</string>
    <string name="plus_points_multiplier">(+%d%% к очкам)</string>
    <string name="plus_time_multiplier">(+%d%% ко времени)</string>
    <string name="unassigned_points">Нераспределенные очки характеристик: %d</string>
    <string name="user_rank_text">Ранг: %s</string>
    <string name="amount_of_duels_won">Количество побед: %d</string>
    <string name="amount_of_duels_lost_text">Количество поражений: %d</string>
    <string name="seconds_passed_text">Времени прошло: %dс</string>
    <string name="health_text">%d/%d</string>
    <string name="duel_result_win_text">Вы победили!</string>
    <string name="duel_result_lose_text">Вы проиграли</string>
    <string name="guild_players_amount_text">%d/15 игроков</string>
    <string name="amount_of_completed_challenges_text">Количество выполненных испытаний: %d</string>
    <string name="amount_of_participants_text">Количество участников: %d</string>
    <string name="collective_level_text">Общий уровень участников: %d</string>
    <string name="guild_rank">Ранг: %d</string>
    <string name="join_guild_join">Присоединится</string>
    <string name="join_guild_cancel">Отменить</string>
    <string name="participant_level">Уровень: %d</string>
    <string name="tv_player_place_text">Место: %d</string>
    <string name="tv_list_update_countdown_text">Обновление списка через: %s</string>
    <string name="player_rating_stat_steps_text">Количество шагов: %d</string>
    <string name="player_rating_stat_duels_text">Количество выигранных дуэлей: %d</string>
    <string name="guild_editor_header_create">Создать гильдию</string>
    <string name="guild_editor_header_edit">Изменить гильдию</string>
    <string name="current_guild_text">Текущая гильдия: %s</string>
    <string name="menu_exit">Выйти</string>
    <string name="text_current_guild_none">Вы не состоите в гильдии</string>
</resources>