<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile_title"
        android:icon="@drawable/ic_side_menu_profile"
        />
    <item
        android:id="@+id/menu_inventory"
        android:title="@string/menu_inventory_title"
        android:icon="@drawable/ic_side_menu_inventory"
        />
    <item
        android:id="@+id/menu_characteristics"
        android:title="@string/menu_characteristics_title"
        android:icon="@drawable/ic_menu_characteristics"
        />
    <item
        android:id="@+id/menu_achievements"
        android:title="@string/manu_achievements_title"
        android:icon="@drawable/ic_side_menu_achievements"
        />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_rewards_settings"
        android:icon="@drawable/ic_side_menu_settings"
        />
</menu>