<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bc_item_guild"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_guild_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Название гильдии" />

    <TextView
        android:id="@+id/tv_guild_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/merriweather_regular"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/guild_rank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guild_name"
        tools:text="Ранг 30" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_join_guild"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/join_guild_join"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:background="@drawable/bc_btn_join_guild"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_guild_players_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guild_players_amount_text"
        android:fontFamily="@font/merriweather_regular"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="10/15 игроков"/>
</androidx.constraintlayout.widget.ConstraintLayout>