<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="15dp"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bc_item_player_rating">

    <ImageView
        android:id="@+id/iv_player_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_regular"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_player_icon"
        app:layout_constraintStart_toEndOf="@+id/iv_player_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Участник 1" />

    <TextView
        android:id="@+id/tv_player_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Уровень: 10"
        android:text="@string/participant_level"
        android:textColor="@color/black"
        android:fontFamily="@font/merriweather_regular"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_player_icon" />

    <TextView
        android:id="@+id/tv_player_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_player_place_text"
        android:textColor="@color/black"
        android:fontFamily="@font/merriweather_regular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_player_rating_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_rating_stat_steps_text"
        android:fontFamily="@font/merriweather_regular"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>