<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#CD8415"
    android:layout_margin="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_item_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/bc_game_item"
            android:backgroundTint="@color/gray"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_item_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:flexDirection="column"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_item_image"
            app:layout_constraintTop_toTopOf="@+id/iv_item_image">

            <TextView
                android:id="@+id/tv_amount_of_points_fixed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:text="@string/amount_of_points_fixed"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="+ 40 очков к 100 шагам" />

            <TextView
                android:id="@+id/tv_amount_of_points_multiplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:text="@string/amount_of_points_multiplier"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="+ 1.2 к количеству очков" />

            <TextView
                android:id="@+id/tv_amount_of_minutes_fixed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:text="@string/amount_of_minutes_fixed"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="+ 30 мин к продолжительности испытания" />

            <TextView
                android:id="@+id/tv_time_multiplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:text="@string/time_multiplier"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="+ 1.2 к продолжительности испытания" />
        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/merriweather_regular"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Меч 1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>