<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#CD8415"
    app:cardCornerRadius="10dp"
    android:layout_margin="15dp"
    android:layout_width="160dp"
    android:layout_height="240dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_item_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:background="@drawable/bc_game_item"
            android:backgroundTint="@color/gray"
            android:src="@drawable/ic_item_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/merriweather_regular"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_item_image"
            tools:text="Предмет 1" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_amount_of_points_fixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#221C1C"
                    android:fontFamily="@font/merriweather_regular"
                    android:textSize="11sp"
                    android:text="@string/amount_of_points_fixed"
                    tools:text="+ 40 очков к 100 шагам" />
                <TextView
                    android:id="@+id/tv_amount_of_points_multiplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#221C1C"
                    android:fontFamily="@font/merriweather_regular"
                    android:textSize="11sp"
                    android:text="@string/amount_of_points_multiplier"
                    tools:text="+ 1.2 к количеству очков" />
                <TextView
                    android:id="@+id/tv_amount_of_minutes_fixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#221C1C"
                    android:fontFamily="@font/merriweather_regular"
                    android:textSize="11sp"
                    android:text="@string/amount_of_minutes_fixed"
                    tools:text="+ 30 мин к продолжительности испытания" />
                <TextView
                    android:id="@+id/tv_time_multiplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#221C1C"
                    android:fontFamily="@font/merriweather_regular"
                    android:textSize="11sp"
                    android:text="@string/time_multiplier"
                    tools:text="+ 1.2 к продолжительности испытания" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
